# NeuralNote

./: .env.sonar.example  .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  NeuralNote-threat-model.md  PRODUCT.md  README.md  SECURITY.md  compose.sonar.yml  latest-alpha.json  security_best_practices_report.md  sonar-project.properties
.cargo/: config.toml
.github/workflows/: ci.yml  e2e.yml  release-alpha.yml
.keel/decisions/: CONV-001.md  CONV-002.md  CONV-003.md  CONV-004.md  CONV-005.md  CONV-006.md  CONV-007.md  CONV-008.md
app/: lcov-rust.info
app/desktop/: .gitignore  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.browser.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/binaries/: README.md
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/icons/: icon.icns
app/desktop/src-tauri/src/: ai.rs  authorized_paths.rs  event_names.rs  lib.rs  local.rs  menu.rs  openrouter_catalogue.rs  openrouter_catalogue_contract_tests.rs  provider_config_mutation.rs  requirement_detection.rs  requirement_detection_tests.rs  requirement_download.rs  requirement_install_lock.rs  requirement_installer.rs  requirement_installer_lock_tests.rs  requirement_installer_tests.rs  requirement_source_build.rs  requirement_source_build_tests.rs  vault_mutation.rs
app/desktop/src-tauri/src/commands/: ai.rs  lifecycle.rs  mod.rs  preferences.rs  templates.rs  vault.rs  workspace_state.rs
app/desktop/src-tauri/src/skills/: elicitation.rs  mod.rs  note_writer.rs  note_writer_unsupported.rs  quarantine_recovery.rs  undo.rs
app/desktop/src-tauri/src/youtube/: audio_coverage_harness.rs  audio_coverage_urls.sample.txt  live_eval.rs  live_tests.rs  mod.rs  pot.rs  pot_protocol.rs  pot_runtime.rs  pot_tests.rs  process.rs  process_runtime.rs  process_tests.rs  service.rs  service_files.rs  service_files_tests.rs  service_process.rs  service_tests.rs  service_url_tests.rs  thumbnail.rs  thumbnail_tests.rs  transcription.rs  whisper.rs  whisper_tests.rs  workspace.rs  workspace_tests.rs  ytdlp.rs  ytdlp_tests.rs
app/desktop/src-tauri/tests/: behavioural_eval.rs
assets/brand/: README.md  build_assets.py  build_brand_pack.py
crates/neuralnote-core/: Cargo.toml
crates/neuralnote-core/src/: backlinks.rs  config_io.rs  entries.rs  error.rs  lib.rs  links.rs  model.rs  note.rs  paths.rs  preferences.rs  recents.rs  rich_edit.rs  search.rs  templates.rs  tree.rs  vault.rs  workspace_state.rs
crates/neuralnote-core/src/ai/: capabilities.rs  elicitation.rs  events.rs  evidence.rs  llm.rs  mod.rs  openai.rs  openrouter_catalogue.rs  orchestrator.rs  provider_config.rs  requirement_binaries.rs  retrieval.rs  skill_tools.rs  skills.rs  tools.rs  verify.rs  write_policy.rs  youtube.rs  youtube_route.rs  youtube_selection.rs  youtube_tool_errors.rs  youtube_tool_schemas.rs  youtube_tools.rs
crates/neuralnote-core/src/ai/fixtures/fixture_skill/: SKILL.md
crates/neuralnote-core/src/ai/fixtures/youtube_distil/: SKILL.md
crates/neuralnote-core/src/ai/local/: hf.rs  mod.rs  pull.rs  tags.rs
crates/neuralnote-core/src/capture/: audio.rs  audio_coverage.rs  audio_coverage_tests.rs  audio_stream.rs  audio_tests.rs  cost.rs  error.rs  filename.rs  frontmatter.rs  mod.rs  profile.rs  routing.rs  transcript.rs  vault.rs  vtt.rs  youtube.rs  youtube_ids.rs
crates/neuralnote-core/src/links/: mask.rs  mod.rs
crates/neuralnote-core/src/templates/: discovery.rs  mod.rs  render.rs  settings.rs
crates/neuralnote-core/tests/: capture_note_helpers.rs  capture_routing.rs  capture_routing_adversarial.rs  capture_transcript.rs  capture_vtt.rs  capture_youtube.rs  elicitation.rs  entries.rs  list_dir.rs  preferences_and_template_settings.rs  recents.rs  rich_edit.rs  rich_edit_io.rs  search_reader_encoding.rs  skill_orchestrator.rs  skills_bank.rs  tool_skills.rs  workspace_state.rs  write_policy.rs  youtube_io.rs  youtube_orchestrator.rs  youtube_route.rs  youtube_selection.rs  youtube_tool_dispatch.rs  youtube_tool_schemas.rs
crates/neuralnote-core/tests/fixtures/audio/: README.md  aac-lc-fragmented.m4a  aac-lc-truncated.m4a
crates/neuralnote-core/tests/fixtures/vtt/: auto_word_tags.vtt  human.vtt  malformed.vtt  overlapping.vtt  rolling.vtt  styled_plain_duplicates.vtt  truncated.vtt  whisper_1_9_1.vtt
crates/neuralnote-core/tests/support/: mod.rs
crates/neuralnote-core/tests/youtube_support/: mod.rs  route.rs  selection.rs
crates/neuralnote-release/: Cargo.toml
crates/neuralnote-release/src/: lib.rs
docs/: definition-of-done.md  local-sonarqube.md  local-updater-testing.md  note-test-vault.md  releasing-macos-alpha.md
docs/architecture/: README.md  gaps-and-improvements.md  spec-vs-built.md  system-overview.md
docs/lld/: LLD-001-vault-and-path-safety.md  LLD-002-note-io-and-frontmatter.md  LLD-003-vault-tree-and-watcher.md  LLD-004-search.md  LLD-005-links-backlinks-graph.md  LLD-006-templates.md  LLD-007-chat-orchestration.md  LLD-008-retrieval-evidence-citation.md  LLD-009-llm-transport-and-sse.md  LLD-010-providers-secrets-sidecar.md  LLD-011-ipc-and-event-contracts.md  LLD-012-frontend-architecture.md  README.md
docs/releases/: RUNBOOK.md  v0.2.0.md  v0.2.1.md
prototype/: NOTES.md  PLAN.md  design.md
scripts/: check-release-workflow.mjs  fetch-ollama-sidecar.sh  prepare-note-test-vault.mjs  rust-quality-gate.sh  rust-quality-gate.test.sh  verify-note-test-vault.mjs
specs/: ai-cited-chat-slice.md  ai-providers-slice.md  ai-skills-bank-slice.md  app-vault-slate-plan.md  brand-positioning-refresh.md  ci-and-local-quality-gates.md  conversational-chat-slice.md  inline-tag-search.md  lazy-file-tree.md  neural-note.md  search-and-graph-view.md  source-native-live-preview-editor-implementation-plan.md  source-native-live-preview-editor.md  titlebar-and-note-tabs.md  v0.2.0-interaction-release.md  v0.2.0-whats-new.md  youtube-distil-skill.md
(+440 files in other folders)
