[package]
name = "neuralnote-core"
version = "0.1.0"
edition = "2021"
description = "Client-agnostic vault domain for NeuralNote: tree scan, markdown + YAML frontmatter, file/folder CRUD, recent vaults, and path safety. No client/UI dependency."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Maintained drop-in fork of the now-deprecated/archived serde_yaml (PA-006):
# parses untrusted frontmatter, so it must keep getting security fixes.
serde_yaml_ng = "0.10"
# Logging facade only (no logger backend) so the core can warn on tolerated
# faults; the host app installs the actual logger (tauri-plugin-log).
log = "0.4"
trash = "5"
# Async traits for the AI orchestration seam (LlmClient / RetrievalProvider),
# kept runtime-agnostic — the host app supplies the executor.
async-trait = "0.1"
# Deterministic local date/time rendering for Obsidian-compatible note templates.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Generates the TypeScript mirror of the domain/AI contract types (the
# `app/desktop/src/lib/bindings/` files) from these Rust types during `cargo test`,
# so the frontend can never silently drift out of lockstep with serde's wire shape.
# serde-compat (a default feature) makes ts-rs read the existing `#[serde(...)]`
# attributes, so the emitted TS matches the exact JSON serde produces.
ts-rs = "12.0.1"

[dev-dependencies]
tempfile = "3"
# Block on async trait methods in unit tests without pulling a full runtime.
futures = "0.3"
