[package]
name = "neuralnote-core"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Client-agnostic vault domain for NeuralNote: tree scan, markdown + YAML frontmatter, file/folder CRUD, recent vaults, and path safety. No client/UI dependency."

[features]
default = ["youtube-audio"]
youtube-audio = ["dep:symphonia", "dep:rubato", "dep:audioadapter-buffers"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Maintained drop-in fork of the now-deprecated/archived serde_yaml (PA-006):
# parses untrusted frontmatter, so it must keep getting security fixes.
serde_yaml_ng = "0.10"
# Logging facade only (no logger backend) so the core can warn on tolerated
# faults; the host app installs the actual logger (tauri-plugin-log).
log = "0.4"
trash = "5"
# Async traits for the AI orchestration seam (LlmClient / RetrievalProvider),
# kept runtime-agnostic — the host app supplies the executor.
async-trait = "0.1"
# Deterministic local date/time rendering for Obsidian-compatible note templates.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Generates the TypeScript mirror of the domain/AI contract types (the
# `app/desktop/src/lib/bindings/` files) from these Rust types during `cargo test`,
# so the frontend can never silently drift out of lockstep with serde's wire shape.
# serde-compat (a default feature) makes ts-rs read the existing `#[serde(...)]`
# attributes, so the emitted TS matches the exact JSON serde produces.
ts-rs = "12.0.1"
# Decode the pinned AAC-LC M4A rendition without shipping ffmpeg. Keep the
# dependency feature surface to exactly the codec/container pair we consume.
symphonia = { version = "0.6.0", default-features = false, features = ["aac", "isomp4"], optional = true }
# Offline fixed-ratio resampling from YouTube's source rate to Whisper's 16 kHz.
rubato = { version = "4.0.0", default-features = false, features = ["fft_resampler"], optional = true }
# Slice-backed adapters required by rubato 4's batch API.
audioadapter-buffers = { version = "4.0.0", default-features = false, features = ["std"], optional = true }
# Thumbnail bytes cross the frozen elicitation contract only as bounded data URIs.
base64 = "0.22.1"
# Complete HTML named/numeric entity decoding for untrusted caption text.
html-escape = "0.2.14"
# Unicode General_Category data shared with the frontend tag grammar. The
# compiled-data provider is deterministic and already present in Cargo.lock.
icu_properties = "2.2.0"
# Unicode *full* case folding (CaseFolding.txt C+F mappings) for vault search.
# Chosen over icu_casemap because `default_case_fold` yields a per-`char`
# iterator — the exact zero-alloc shape the folded→original byte-range mapping
# in search.rs depends on (icu_casemap exposes full folding only at the string
# level; its `simple_fold(char)` would not expand ß→ss). Ships Unicode 16.0.0
# tables (see `caseless::UNICODE_VERSION`); the fold surface tracks Unicode
# releases, not code churn.
caseless = "0.2.2"
# Decode the three accepted thumbnail formats before they cross the IPC boundary.
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
tempfile = "3"
# Block on async trait methods in unit tests without pulling a full runtime.
futures = "0.3"
