[package]
name = "desktop"
version = "0.1.0"
description = "NeuralNote desktop shell — Tauri layer over neuralnote-core: open/create vaults, browse and edit markdown notes, file/folder CRUD."
authors = ["NeuralNote"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
neuralnote-core = { path = "../../../crates/neuralnote-core" }
# AI slice — OS keychain for the BYO API key. macOS-first; add `windows-native`
# / `sync-secret-service` features when those desktop targets land (spec §8.4).
keyring = { version = "3", features = ["apple-native"] }
# Native HTTP for the OpenRouter LLM client. rustls avoids a system OpenSSL dep;
# `stream` gives the SSE byte stream for the final-answer token stream.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = "0.39"
# Async sleep for the Ollama sidecar health-poll (tokio is already in the tree via
# tauri/reqwest; we only need its timer here).
tokio = { version = "1", features = ["time"] }
# Emits the TypeScript mirror of the shell-owned command types (AiStatus and the
# per-provider status structs) into `app/desktop/src/lib/bindings/` during
# `cargo test`, matching the generation the core crate does for the domain types.
ts-rs = "12.0.1"

[dev-dependencies]
# Behavioural-eval integration test (tests/behavioural_eval.rs): a temp fixture
# vault, an async runtime for the real HTTP clients, and its own Ollama reachability probe.
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
